--- a/contato.html
+++ b/contato.html
@@ -24,10 +24,8 @@
 	</div>
 <!-- final cabecalho -->
 
- 	<div >
- 		<div id="area-contato">
+ 	<section id="area-contato">
  			<h1>Contate-nos</h1>
-
  			<div class="informações">
 					<h3 class="letra">ENCONTRE-NOS</h3>
 					
@@ -37,24 +35,23 @@
 						 92103-9000</a>
 			</div> 
 
-			<div class="informações">
-					<h3 class="letra">HORAS</h3>
-					<p class="letra2">
-						 Segunda a Sábado<br>
-						 9h às 19h<br>
-						 Domingo<br>
-						 10h às 18h
-			</div> 
+		<div class="informações">
+			<h3 class="letra">HORAS</h3>
+			<p class="letra2">
+			Segunda a Sábado<br>
+			9h às 19h<br>
+			Domingo<br>
+			10h às 18h</p>
+		</div> 
 
-			<div class="informações">
-					<h3 class="letra">LIGUE PARA NÓS</h3>
-					<p class="formatação-número">
-						 +55 (21) 97475-6968<br><br>
-						+55 (21) 99675-3284
-					</p> 
-			</div> 
-		</div>	
- 	</div>
+		<div class="informações">
+			<h3 class="letra">LIGUE PARA NÓS</h3>
+			<p class="formatação-número">
+			 +55 (21) 97475-6968<br><br>
+			+55 (21) 99675-3284
+			</p> 
+		</div> 
+	</section>	
  	<!-- rodapé -->	
 
 	<footer id="rodapé">
